Started gemini populator

--- a/config.ini
+++ b/config.ini
@@ -6,4 +6,5 @@ fuzzy_threshold = 70
 
 [POPULATOR]
 gemini_api_key = GEMINI_API_KEY
-gemini_model = gemini-1.5-flash
+gemini_model = gemini-2.0-flash-lite
+
